base/infrastructure/istio/installation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
    istio-injection: disabled
  annotations:
    argocd.argoproj.io/sync-wave: "-1"  # Create namespace first
